--- a/backend/ai_blog_app/templates/login.html
+++ b/backend/ai_blog_app/templates/login.html
@@ -23,7 +23,17 @@
             <div class="bg-white p-8 shadow-md rounded-lg max-w-md w-full">
 
                 <!-- Login Form -->
-                <form action="submit" class="space-y-4">
+                <form action="" class="space-y-4" method="POST">
+                    {% csrf_token %}
+
+                {% if error_message %}
+                    <div class="items-center text-red">
+                        <h2>
+                            {{ error_message }}
+                        </h2>
+                    </div>
+                {% endif %}
+
                     <h2 class="text-xl font-semibold">Login</h2>
                     <div>
                         <label for="username" class="block mb-1 font-medium">Username</label>
